// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request Service Header Handling combineHeaders() can add basic authentication when necessary 1`] = `
Object {
  "Accept": "application/hal+json, application/json",
  "Accept-Encoding": "gzip,deflate",
  "Accept-Language": "en-US",
  "Authorization": "Basic ZGVtbzpkZW1v",
  "BreakfastFoods": "AreTheBest",
  "Connection": "Keep-Alive",
  "Content-Type": "application/json",
  "Proxy-Connection": "Keep-Alive",
  "User-Agent": "carrier360 (compatible; Mozilla/5.0; MSIE 9.0; Trident/5.0; ios)",
}
`;

exports[`Request Service Header Handling combineHeaders() can combine optional and default headers 1`] = `
Object {
  "Accept": "application/hal+json, application/json",
  "Accept-Encoding": "gzip,deflate",
  "Accept-Language": "en-US",
  "BreakfastFoods": "AreTheBest",
  "Connection": "Keep-Alive",
  "Content-Type": "application/json",
  "Proxy-Connection": "Keep-Alive",
  "User-Agent": "carrier360 (compatible; Mozilla/5.0; MSIE 9.0; Trident/5.0; ios)",
}
`;

exports[`Request Service Request Handling request() can make an HTTP request using fetch 1`] = `
Object {
  "0": "h",
  "1": "t",
  "10": "m",
  "11": "p",
  "12": "l",
  "13": "e",
  "14": ".",
  "15": "c",
  "16": "o",
  "17": "m",
  "2": "t",
  "3": "p",
  "4": ":",
  "5": "/",
  "6": "/",
  "7": "e",
  "8": "x",
  "9": "a",
}
`;

exports[`Request Service Request Handling request() can return an error message when an http request fails 1`] = `[ResponseError: Service temporarily unavailable]`;

exports[`Request Service Request Handling request() can throw an error when the response is not ok 1`] = `[ResponseError: Service temporarily unavailable]`;

exports[`Request Service Request Handling request() can throw an error when the response status is 202 1`] = `[ResponseError: Service temporarily unavailable]`;
